--- a/app/res/values/arrays.xml
+++ b/app/res/values/arrays.xml
@@ -71,10 +71,16 @@
     </string-array>
 
     <string-array name="dolby_stereo_entries">
+        <item>@string/dolby_low</item>
         <item>@string/dolby_medium</item>
+        <item>@string/dolby_high</item>
+        <item>@string/dolby_max</item>
     </string-array>
 
     <string-array name="dolby_stereo_values">
-        <item>35</item>
+        <item>4</item>
+        <item>24</item>
+        <item>44</item>
+        <item>64</item>
     </string-array>
 </resources>
