--- a/app/res/values/arrays.xml
+++ b/app/res/values/arrays.xml
@@ -71,6 +71,7 @@
     </string-array>
 
     <string-array name="dolby_stereo_entries">
+        <item>@string/dolby_off</item>
         <item>@string/dolby_low</item>
         <item>@string/dolby_medium</item>
         <item>@string/dolby_high</item>
@@ -78,6 +79,7 @@
     </string-array>
 
     <string-array name="dolby_stereo_values">
+        <item>0</item>
         <item>4</item>
         <item>24</item>
         <item>44</item>
